--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "start": "cross-env PORT=3000 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "echo 'Tests not yet implemented' && exit 1",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"src/**/*.{js,jsx,tsx}\""
   },
   "devDependencies": {
     "h": "^1.0.0",
+    "prettier": "^2.0.5",
     "react-app-rewired": "^2.1.5",
     "source-map-loader": "^0.2.4"
   },
